# stubborn

./: .coveragerc  .dockerignore  .env.example  .env.local  .env.test  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  README.rst  changelog.md  changelog.rst  codecov.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.test.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml  main.yml
apps/: actions.py  admin.py  apps.py  enums.py  filters.py  forms.py  hooks.py  inlines.py  mixins.py  models.py  renderers.py  serializers.py  services.py  styles.py  urls.py  utils.py  views.py  wigdets.py
apps/management/commands/: create_admin.py  create_dummy_admin.py  createadmin.py  import_application_from_json_file.py  remove_demo_records.py
apps/migrations/: 0001_initial.py  0002_auto_20211102_2006.py  0003_alter_resourcestub_unique_together.py  0004_alter_resourcestub_unique_together.py  0005_alter_requestlog_response.py  0006_auto_20220107_1814_squashed_0008_alter_responsestub_format.py  0007_resourcestub_proxy to.py  0008_requestlog_status_code.py  0009_auto_20220206_2137.py  0010_auto_20220326_1229.py  0011_alter_resourcestub_response.py  0012_auto_20220401_0812.py  0013_auto_20220424_1218.py  0014_auto_20220424_1250.py  0015_auto_20220424_1304.py  0016_requestlog_url.py  0017_auto_20220601_2143.py  0018_alter_resourcestub_response_type.py  0019_auto_20220603_1417.py  0020_auto_20220603_1636.py  0021_auto_20220605_2110.py  0022_auto_20220609_1351.py  0023_auto_20221226_2144.py  0024_auto_20221226_2144.py  0025_auto_20221226_2157.py  0026_auto_20221226_2242.py  0027_auto_20221226_2244.py  0028_remove_resourcehook_unique_order_per_resource.py  0029_auto_20221226_2250.py  0030_auto_20221226_2311.py  0031_auto_20221226_2312.py  0032_auto_20221226_2313.py  0033_auto_20221226_2316.py  0034_auto_20221226_2318.py  0035_resourcehook_unique_order_per_resource.py  0036_auto_20221227_2150.py  0037_auto_20221227_2153.py  0038_alter_resourcestub_application.py  0039_alter_requestlog_application.py  0040_alter_responsestub_application.py  (+15 more)
apps/static/admin/css/: application.css  seti.css
apps/static/admin/js/application/: change_list.js
apps/static/admin/js/resource/: hooksSwitcher.js  responseSwitcher.js
apps/static/admin/js/widgets/: codemirror-init.js
apps/templates/admin/: base.html  base_site.html  related_widget_wrapper.html
apps/templates/admin/application/: change_form.html
apps/templates/admin/apps/: change_form.html  change_list.html
apps/templates/admin/apps/application/: change_form.html  change_list.html
apps/templates/admin/apps/request_log/: change_form.html
apps/templates/admin/apps/request_log/inlines/: tabular.html
apps/templates/admin/inlines/: resources_tabular.html
apps/templatetags/: apps.py
apps/tests/: application_json_mock.py  conftest.py  data.py  factories.py  test_actions.py  test_application_export.py  test_application_export_import.py  test_application_import.py  test_services.py  test_utils.py  test_views.py  utils.py
deploy/: Dockerfile  uwsgi.ini
docker/: Dockerfile  dev.Dockerfile
docs/: about.md  conf.py  index.rst  requirements.txt  run-in-dev.md  run-in-prod.md  service-api.md
examples/: docker-compose.base.yml  docker-compose.https-portal.yml  docker-compose.nginx-proxy-local.yml
scripts/: healthcheck.py
stubborn/: asgi.py  old_s  urls.py  wsgi.py
stubborn/settings/: base.py  local.py  production.py  staging.py  test.py
stubborn/settings/uwsgi/: uwsgi.ini  uwsgi_dev.ini
