[tool.poetry]
name = "stubborn"
version = "1.0.1"
description = "Just a simple REST API stub service."
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Faker = "13.4.0"
Jinja2 = "3.1.2"
Pygments = "2.11.2"
argon2-cffi = "21.3.0"
django = "3.2.16"
django-admin-rangefilter = "0.9.0"
django-cors-headers = "3.13.0"
django-environ = "0.9.0"
djangorestframework = "3.14.0"
djangorestframework-xml = "2.0.0"
ipdb = "0.13.11"
psycopg2-binary = "2.9.5"
requests = "2.28.1"
uWSGI = "2.0.21"

[tool.poetry.dev-dependencies]
black = "22.12.0"
codecov = "2.1.12"
django-coverage-plugin = "3.0.0"
django-extensions = "3.2.1"
django-stubs = "1.9.0"
factory-boy = "3.2.1"
flake8 = "6.0.0"
flake8-isort = "5.0.3"
ipython = "8.7.0"
mypy = "0.910"
pydocstyle = "6.1.1"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"
types-Pygments = "2.9.19"
types-requests = "2.28.11.7"

[tool.black]
line-length = 120
include = ".pyi?$"
force-exclude = "migrations"
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
