[tool.poetry]
name = "stubborn"
version = "1.3.0"
description = "Just a simple REST API stub service."
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Faker = "17.0.0"
Jinja2 = "3.1.2"
Pygments = "2.14.0"
argon2-cffi = "21.3.0"
django = "3.2.18"
django-admin-rangefilter = "0.9.0"
django-cors-headers = "3.13.0"
django-environ = "0.9.0"
djangorestframework = "3.14.0"
djangorestframework-xml = "2.0.0"
ipdb = "0.13.11"
psycopg2-binary = "2.9.5"
requests = "2.28.2"
uWSGI = "2.0.21"

[tool.poetry.dev-dependencies]
black = "22.12.0"
codecov = "2.1.13"
django-coverage-plugin = "3.0.0"
django-extensions = "3.2.1"
django-stubs = "1.9.0"
factory-boy = "3.2.1"
flake8 = "6.0.0"
flake8-isort = "6.0.0"
ipython = "8.10.0"
mypy = "0.910"
pydocstyle = "6.3.0"
pytest-cov = "4.0.0"
pytest-django = "4.5.2"
types-Pygments = "2.14.0.2"
types-requests = "2.28.11.12"

[tool.black]
line-length = 120
include = ".pyi?$"
force-exclude = "migrations"
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
