[tool.poetry]
name = "stubborn"
version = "1.8.2"
description = "Just a simple REST API stub service."
authors = ["Sergei Nagaev <nagaev.sv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Faker = "17.0.0"
Jinja2 = "3.1.4"
Pygments = "2.16.1"
argon2-cffi = "23.1.0"
django = "^3.2"
django-admin-rangefilter = "0.11.2"
django-cors-headers = "4.3.1"
django-environ = "0.11.2"
djangorestframework = "3.14.0"
djangorestframework-xml = "2.0.0"
ipdb = "0.13.13"
psycopg2-binary = "2.9.9"
requests = "2.31.0"
setuptools = "69.0.2"  # temporary solution, just to replace the default version with CVE-2022-40897
uWSGI = "2.0.23"

[tool.poetry.dev-dependencies]
black = "^23.9"
codecov = "^2.1"
django-coverage-plugin = "^3.1"
django-extensions = "^3.2"
django-stubs = "1.9.0"
factory-boy = "^3.3"
flake8 = "^6.1"
flake8-isort = "^6.1"
ipython = "^8.15"
mypy = "0.931"
pydocstyle = "^6.3"
pytest-cov = "^4.1"
pytest-django = "4.5.2"
types-Pygments = "^2.14"
types-requests = "^2.31"

[tool.black]
line-length = 120
include = ".pyi?$"
force-exclude = "migrations"
skip-string-normalization = true

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
